Update CSS and HTML files

--- a/src/partials/PORTAL/p_ayuda.html
+++ b/src/partials/PORTAL/p_ayuda.html
@@ -4,11 +4,11 @@
       <h2>¿Necesitas ayuda?</h2>
 
       <ul class="pa__ayuda_items">
-        <li>
+        <!-- <li>
           <i class="ayu-ico fa-regular fa-messages"></i>
           <p>¡Escríbenos!</p>
           <a href="#"><span>Chat en línea</span></a>
-        </li>
+        </li> -->
         <li>
           <i class="ayu-ico fa-regular fa-phone"></i>
           <p>Llama a nuestras líneas</p>
@@ -17,7 +17,7 @@
               ><span>Nacional</span>01 8000 412 854
             </a>
             <a href="tel:604) 402 68 76" target="_blank"
-              ><span>Medellín</span>(604) 402 68 76</a
+              ><span>Medellín</span>604 402 68 76</a
             >
           </div>
         </li>
