--- a/src/partials/PORTAL/p_footer.html
+++ b/src/partials/PORTAL/p_footer.html
@@ -158,10 +158,10 @@
     </div>
   </div>
 </footer>
-
+<!-- 
 <div id="open_chat" class="as__help toopen">
   <ul class="as__help_icons">
-    <!-- <li>
+    <li>
       <a
         href="https://api.whatsapp.com/send?phone=573155114150"
         target="_blank"
@@ -169,7 +169,7 @@
       >
         <span> Whatsapp </span>
       </a>
-    </li> -->
+    </li>
     <li>
       <button id="start_chat" class="as__help_icons_chat">
         <span> Chat </span>
@@ -181,7 +181,7 @@
       <span class="sr-only"> Chat </span>
     </div>
   </button>
-</div>
+</div> -->
 
 <a
   class="as_usability"
