--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -88,7 +88,7 @@
             <li><a href="#">Crear PQRS</a></li>
           </ul> -->
         </li>
-        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
+        <!-- <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
           <a
             class="as__nav_links_ppal_link"
             aria-current="page"
@@ -107,7 +107,7 @@
             </li>
             <li><a href="#"> Consulta novedades</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="as__nav_links_ppal_li">
           <a
             class="as__nav_links_ppal_link"
@@ -158,6 +158,12 @@
               <a href="/PORTAL/3_actualizacion_contacto.html">
                 Actualización de datos
                 <i class="fa-solid fa-user-gear"></i
+              ></a>
+            </li>
+            <li>
+              <a href="/PORTAL/3_actualizacion_contacto.html">
+                Configuraciones
+                <i class="fa-solid fa-gear"></i
               ></a>
             </li>
             <li>
