--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -856,7 +856,7 @@ body {
         @apply w-auto mx-auto text-4xl font-je text-azul-bold text-center flex py-1.5 px-5 rounded-full bg-white;
       }
       ul.pa__ayuda_items {
-        @apply w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-x-4 gap-y-8 2xl:w-10/12 mx-auto items-start justify-between;
+        @apply mx-auto lg:max-w-4xl w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-8 2xl:w-10/12 items-start justify-between;
         li {
           @apply lg:w-auto w-full flex flex-col items-center justify-center gap-3;
           i.ayu-ico {
