Add chat bot image to banners.html

--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -5,26 +5,38 @@
         <div class="as__banner_content">
           <h1>
             <span class="ban_anim1"
-              >Colilla de pago y<br /><span style="color: #2752b0"
-                >certificado de pensión</span
-              >
+              >¡Hola, <br /><span style="color: #2752b0">soy Lusa!</span>
             </span>
           </h1>
           <div>
             <p class="ban_anim1">
-              ¿Necesitas solicitar tu colilla de pago o certificado de pensión?
+              A partir de ahora seré tu asistente virtual y te acompañaré, a
+              través de nuestro nuevo chat, a gestionar tus solicitudes
+              relacionadas con:
             </p>
             <p class="dest ban_anim1">
-              <b>Lusa, nuestra asistente virtual, está lista para ayudarte.</b>
-              Escríbele a través del chat que encuentras en nuestro sitio web y
-              autogestiona esta y otras solicitudes de tu interés.
+              <b
+                >Colillas de pago | certificados de pensión | copia de póliza</b
+              >
             </p>
-            <p><b>¡Es muy fácil y rápido!</b></p>
+
+            <button onclick="startChat()" class="as__button self-start">
+              <span>¡Escríbeme!</span>
+              <i
+                role="presentation"
+                class="fa-light fa-arrow-right"
+                aria-hidden="true"
+              ></i>
+            </button>
           </div>
         </div>
         <div class="as__banner_images">
           <img src="/assets/images/banner_2_bg.webp" alt="Asulado" />
-          <img src="/assets/images/banner_3_foto.webp" alt="Asulado" />
+          <img
+            src="/assets/images/chat_bot.webp"
+            class="max-w-[800px]"
+            alt="Asulado"
+          />
         </div>
         <div class="as__banner_piso"></div>
       </div>
