Remove commented out button and add new paragraph in banners.html

--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -19,15 +19,16 @@
                 >Colillas de pago | certificados de pensión | copia de póliza</b
               >
             </p>
+            <p>¡Escríbeme!</p>
 
-            <button onclick="startChat()" class="as__button self-start">
+            <!-- <button onclick="startChat()" class="as__button self-start">
               <span>¡Escríbeme!</span>
               <i
                 role="presentation"
                 class="fa-light fa-arrow-right"
                 aria-hidden="true"
               ></i>
-            </button>
+            </button> -->
           </div>
         </div>
         <div class="as__banner_images">
