Update forms.css and portal.js, and modify HTML files for creating and consulting requests

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -383,7 +383,7 @@
     @apply bg-white;
   }
   .slds-grid {
-    @apply flex;
+    @apply flex gap-y-2;
   }
   .slds-grid_vertical {
     @apply flex-col;
