--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -132,32 +132,27 @@
                 </a>
               </div>
               <div class="as_footer_ct_item">
-                <i role="presentation" class="fa-regular fa-building"></i>
+                <i role="presentation" class="fa-regular fa-phone"></i>
                 <div>
-                  <p class="ttle">Sede Administrativa</p>
-                  <p>Carrera 43 A # 3 – 101 Piso 6</p>
-                  <p>Medellín, Antioquia</p>
+                  <p class="ttle">Marca desde tu teléfono fijo o celular</p>
+                  <p>
+                    <b> Línea nacional:</b> 01 8000 412 854 |<b> Medellín:</b>
+                    (604) 402 68 76
+                  </p>
+                  <p>
+                    <b>Lun-Vie:</b> 07:30 am - 08:00 pm | <b>Sab:</b> 08:00 am -
+                    01:00 pm
+                  </p>
                 </div>
               </div>
-              <div class="as_footer_ct_item">
+
+              <!-- <div class="as_footer_ct_item">
                 <i role="presentation" class="fa-regular fa-clock"></i>
                 <div>
                   <p class="ttle">Horario de atención</p>
                   <p>Lun-Vie: 07:30 am - 05:00 pm</p>
                 </div>
-              </div>
-            </div>
-            <div>
-              <div class="as_footer_ct_item">
-                <i role="presentation" class="fa-regular fa-phone"></i>
-                <div>
-                  <p class="ttle">Marca desde tu teléfono fijo o celular</p>
-                  <p>Línea nacional: 01 8000 412 854</p>
-                  <p class="space">Medellín: (604) 402 68 76</p>
-                  <p>Lun-Vie: 07:30 am - 08:00 pm</p>
-                  <p>Sab: 08:00 am - 01:00 pm</p>
-                </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -381,6 +376,15 @@
         </a>
       </div>
     </div>
+
+    <div class="as_footer_dir">
+      <i role="presentation" class="fa-regular fa-building"></i>
+
+      <p class="ttle">Sede Administrativa</p>
+      <p>Carrera 43 A # 3 – 101 Piso 6</p>
+      <p>Medellín, Antioquia</p>
+    </div>
+
     <div class="as__footer_legals">
       <img src="/assets/images/vigilado.png" alt="asulado" />
       <p>Todos los derechos reservados ASULADO SEGUROS DE VIDA S.A</p>
