--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -134,7 +134,9 @@
               <div class="as_footer_ct_item">
                 <i role="presentation" class="fa-regular fa-phone"></i>
                 <div>
-                  <p class="ttle">Marca desde tu teléfono fijo o celular</p>
+                  <p class="ttle">
+                    Si necesitas ayuda, marca desde tu teléfono fijo o celular:
+                  </p>
                   <p>
                     <b> Línea nacional:</b> 01 8000 412 854 |<b> Medellín:</b>
                     (604) 402 68 76
@@ -377,16 +379,19 @@
       </div>
     </div>
 
-    <div class="as_footer_dir">
-      <i role="presentation" class="fa-regular fa-building"></i>
-
-      <p class="ttle">Sede Administrativa</p>
-      <p>Carrera 43 A # 3 – 101 Piso 6</p>
-      <p>Medellín, Antioquia</p>
-    </div>
-
     <div class="as__footer_legals">
       <img src="/assets/images/vigilado.png" alt="asulado" />
+      <div class="as_footer_dir">
+        <div class="as_footer_dir_title">
+          <i role="presentation" class="fa-regular fa-building"></i>
+          <p class="ttle">Sede Administrativa</p>
+        </div>
+        <div class="as_footer_dir_content">
+          <p>Carrera 43 A # 3 – 101 Piso 6</p>
+          <p>Medellín, Antioquia</p>
+          <p>/ Sin atención al público</p>
+        </div>
+      </div>
       <p>Todos los derechos reservados ASULADO SEGUROS DE VIDA S.A</p>
     </div>
   </div>
