--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -112,8 +112,8 @@
           <a
             class="as__nav_links_ppal_link"
             aria-current="page"
-            title="INICIO"
-            href="certificados.html"
+            title="Preguntas frecuentes"
+            href="/PORTAL/faq.html"
             >Preguntas frecuentes</a
           >
         </li>
