--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -382,10 +382,10 @@
     <div class="as__footer_legals">
       <img src="/assets/images/vigilado.png" alt="asulado" />
       <div class="as_footer_dir">
-        <div class="as_footer_dir_title">
+        <!-- <div class="as_footer_dir_title">
           <i role="presentation" class="fa-regular fa-building"></i>
           <p class="ttle">Sede Administrativa</p>
-        </div>
+        </div> -->
         <div class="as_footer_dir_content">
           <p>Carrera 43 A # 3 – 101 Piso 6</p>
           <p>Medellín, Antioquia</p>
