--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -154,6 +154,7 @@
             role="button"
           />
           <ul class="dropdown-content" tabindex="0">
+            <li class="conex">Último ingreso: 28/02/2024 2:36 PM</li>
             <li>
               <a href="/PORTAL/3_actualizacion_contacto.html">
                 Actualización de datos
